# substreams-sink-rust

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  rust-toolchain.toml
src/: main.rs  substreams.rs  substreams_stream.rs
src/pb/: mod.rs  pb.rs  sf.substreams.internal.v2.rs  sf.substreams.internal.v2.tonic.rs  sf.substreams.rpc.v2.rs  sf.substreams.rpc.v2.tonic.rs  sf.substreams.sink.entity.v1.rs  sf.substreams.sink.service.v1.rs  sf.substreams.sink.service.v1.tonic.rs  sf.substreams.v1.rs  sf.substreams.v1.tonic.rs
